# researchinstitute

./: CMakeLists.txt  CMakePresets.json  README.md  note.txt
cmake/: .gitconfig  Boost.cmake  CUDA.cmake  Cuda.cmake  FindPostgreSQL.cmake  ODB.cmake  PostgreSQL.cmake  cmake_config.cmake  envs.sh  pull.sh  push.sh
cmake/nvim/: init.vim
cmake_backup/: FindPostgreSQL.cmake  SelectLIbraryConfigurations.cmake  Test.cmake
cmake_old/: CUDA.cmake  FindPostgreSQL.cmake  PostgreSQL.cmake.backup  envs.sh
researchinstitute/: CMakeLists.txt  researchinstitute  researchinstitute.cpp  researchinstitute.h
researchinstitute/cinstitute/: chapter1  chapter1.c  function  function.c  testCodeFromBook.c  thefirstprogram.c
researchinstitute/cinstitute/datatypes/: derived.c
researchinstitute/oop/: objects.cpp
researchinstitute/practices_c/: datatypes.c  hackerrank  hackerrank.c  operations.c  thefirstprogram  thefirstprogram.c
researchinstitute/practices_c/datatypes/: primary.c  userdefined.c
researchinstitute/practices_cpp/: TourOfcxx  TourOfcxx.cpp  datatypes  datatypes.cpp  hackerrank  hackerrank.cpp  pointers  pointers.cpp
researchinstitute/problems/: MainApp  MainApp.cpp  TwoSum.cpp
resources/: Curriculum Vite.docx  data_linked_list.txt  input.lst  input_data.txt  output.lst  output_data.txt
src/: CMakeLists.txt  database.cpp  researchinstitute.cpp  researchinstitute.h
src/algorithms/: recursion.cpp
src/debug/: test_linked_list.cpp
src/learn/: test.cpp
src/learn/c/: book.c  c_files.c  datatypes  datatypes.c  hackerrank.c  testlibpq.c  utility_files.c
src/learn/cpp/: Arrays  Arrays.cc  Arrays.cpp  DataTypes.cpp  Date.cpp  MainTest  MainTest.cpp  Month.cpp  Pointers.cc  Pointers.cpp  Vector.cpp  Vector.h  abc  abc.cpp  arrays.cpp  basic_io.cpp  chapter3_modularity.cpp  character_sequences.cpp  connect_databases.cpp  constant.cpp  cpp_core_guidelines.cpp  data_types.cpp  functions.cpp  hackerrank.cc  hackerrank.cpp  input_output.cpp  library_boost.cpp  make_user.cpp  memory_management.cpp  philosophy.cpp  pointers  pointers.cpp  strings_attribute_parser.cpp  strings_stringstream.cpp  templates.cpp  testing.cpp  user-defined_types.cc  user-defined_types.cpp  user.cpp  variable_sized_arrays.cpp
src/learn/cpp-design-patterns-structural/: note.txt
src/learn/cuda/: simpleMultiGPU.cu  simpleMultiGPU.h
src/learn/memory/: memory_management.cpp
src/persistence/: connection_db.cpp
src/practices_c/: book  chapter1.c  datatypes  datatypes.c  hackerrank  hackerrank.c  library.h
src/practices_cpp/: Arrays.cpp  Constant  Constant.cpp  FuncPointer.cpp  MainPointer  MainPointer.cpp  MainTest  MainTest.cpp  PointersArraysReferences.cpp  TourOfcxx  TourOfcxx.cpp  database_connection.cpp  datatypes.cpp  hackerrank  hackerrank.cpp  pointers  pointers.cpp  test  test.cpp  testcode  testcode.cpp  testlibpq.c
src/problems/: MainApp.cpp  TwoSum.cpp  main_app.cc  recursion.cc  test_func.cc  two_sum.cc
src/problems_solving/leetcode/: Delete_N_Nodes_After_M_Nodes_of_a_Linked_List.cpp  doubly_linked_list  doubly_linked_list.cpp  find_the_difference  find_the_difference.cpp  find_the_index_of_the_first_occurrence_in_a_string  find_the_index_of_the_first_occurrence_in_a_string.cpp  linked_list.cpp  merge  merge_strings_alternately.cpp  merge_two_sorted_lists.cpp  node.cpp  node_doubly_linked_list.cpp  node_singly_linked_list.cpp  recursion.cpp  remove_duplicates_from_sorted_list.cpp  singly_linked_list  singly_linked_list.cpp  (+1 more)
src/solving_problem/: interval_map.cpp
(+58 files in other folders)
